force-app/main/default/objects/CRM_Order_Event_V1__e/fields/creditCardTransactionID__c.field-meta.xml
<CustomField>
    <fullName>creditCardTransactionID__c</fullName>
    <description>Transaction Id of the Credit Card charges.</description>
    <label>creditCardTransactionID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>