force-app/main/default/objects/CRM_Order_Event_V1__e/fields/creditRebillMemoDate__c.field-meta.xml
<CustomField>
    <fullName>creditRebillMemoDate__c</fullName>
    <label>creditRebillMemoDate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>