force-app/main/default/objects/CRM_Order_Event_V1__e/fields/creditRebillMemoNumber__c.field-meta.xml
<CustomField>
    <fullName>creditRebillMemoNumber__c</fullName>
    <label>creditRebillMemoNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>