force-app/main/default/objects/CRM_Order_Event_V1__e/fields/shippingAmount__c.field-meta.xml
<CustomField>
    <fullName>shippingAmount__c</fullName>
    <description>Final Shipping Charges to be mapped to this field for Orders that have a variable charge that is determined by 3PL. The Order types include Interanational Distributor Orders and OUS Clinical Orders.</description>
    <label>shippingAmount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>