force-app/main/default/objects/CRM_Order_Event_V1__e/fields/tax__c.field-meta.xml
<CustomField>
    <fullName>tax__c</fullName>
    <description>An array consisting of different types of Taxes applicable at an Order level.</description>
    <label>tax</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>